--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -542,6 +542,21 @@ ___________________________________________________*/
   color: #000000;
 }
 
+/*Floating Nav and Add to Favourites
+___________________________________________________*/
+
+.floating-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px; 
+  background-color: #007BFF;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
 /*Song Info Styling
 ___________________________________________________*/
 
